# python-learning-docs

./: .gitignore  404.html  README.md  gen_ref_pages.py  index.html  objects.inv  properdocs.yml  pyproject.toml  requirements-docs.txt  sitemap.xml
.github/workflows/: docs.yml
docs/: index.md
docs/notes/: 01-getting-started.md
notes/01-getting-started/: index.html
reference/SUMMARY/: index.html
reference/learning/: index.html
reference/learning/example/: index.html
search/: search_index.json
src/learning/: example.py
tests/: test_example.py
